# math-utils

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/fractions/: mod.rs  tests.rs
src/percentajes/: mod.rs  tests.rs
